2008-05-05  Ivan Frade  <ivan.frade@nokia.com

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h: Removed unused code and empty
	functions.

	* src/trackerd/tracker-db.c
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-dbus-files.c:
	(tracker_db_get_field_def) Removed db_con parameter (unused)

	
2008-05-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus-xesam.c
	* src/trackerd/tracker-xesam.c
	* src/trackerd/tracker-db-sqlite.c: Added proper locking for the db
	while dealing with Events for LiveSearches

2008-05-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-xesam-live-search.c
	* src/trackerd/tracker-xesam-live-search.h
	* src/trackerd/tracker-dbus.c
	* src/trackerd/tracker-dbus-xesam.c
	* src/trackerd/tracker-dbus-xesam.h
	* src/trackerd/tracker-xesam.c
	* src/trackerd/tracker-xesam.h
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/libtracker-common/tracker-config.c
	* src/libtracker-common/tracker-config.h
	* data/sqlite-stored-procs.sql
	* data/sqlite-tracker.sql
	* data/Makefile.am: Xesam support infrastructure

2008-04-30  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-file-utils.[ch]: Added to handle
	IO operations.
	
	* src/libtracker-db/Makefile.am:
	* src/libtracker-db/tracker-db-action.[ch]:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-action.[ch]: Moved TrackerAction to
	libtracker-db and renamed to TrackerDBAction.
	
	* src/trackerd/tracker-apps.[ch]:
	* src/trackerd/tracker-db-email.c:
	* src/trackerd/tracker-db-sqlite.[ch]:
	* src/trackerd/tracker-db.[ch]:
	* src/trackerd/tracker-dbus-files.c: 
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email.c:
	* src/trackerd/tracker-email.h:
	* src/trackerd/tracker-inotify.c: 